# Elementkonfluenz

./: .gitignore  CONTENT_STANDARD.md  HERMES_CONTRACT.md  MIGRATION_PLAN.md  PROJECT_STATUS.md  README.md  RENAMING_PLAN.md  ROADMAP.md
.github/workflows/: ci.yml  trend-scan-ci.yml
content-engine/: EMPIRE_SCENE_PLAN.md  README.md  SCENE_PLAN.md
content-engine/brain/: pyproject.toml
content-engine/brain/elementkonfluenz_brain/: __init__.py  advisory.py  builder.py  camera.py  cli.py  events.py  scene_plan.py
content-engine/brain/value_racer_brain/: __init__.py  builder.py  cli.py  data.py  hook_pool.py  planning.py  theme_pool.py  timemap.py
content-engine/brain/value_racer_brain/imperium/: RESEARCH_GUIDE.md  __init__.py  builder.py  cli.py  qa.py  research.py  scene_plan.py
content-engine/brain/value_racer_brain/imperium/data/: imperium_alphabet.yaml  imperium_lvmh.yaml  imperium_nestle.yaml  imperium_toyota.yaml
content-engine/renderer/: package-lock.json  package.json  sample-empire-scene-plan.json  sample-scene-plan.json  tsconfig.json
content-engine/renderer/src/: Composition.tsx  EmpireComposition.tsx  Root.tsx
content-engine/renderer/src/components/: BarRace.tsx  Endscreen.tsx  EventOverlay.tsx  IntroPhase.tsx
content-engine/renderer/src/components/imperium/: BeatPhase.tsx  EmpireEndcardPhase.tsx  FactsPhase.tsx  HookPhase.tsx  RegisterCardsPhase.tsx  ScalePhase.tsx  StampPhase.tsx
content-engine/renderer/src/sceneplan/: empireTheme.ts  empireTypes.ts  interpolation.ts  theme.ts  types.ts
distribution/: README.md  pyproject.toml
distribution/value_racer_distribution/: cli.py  gate.py  history.py  models.py
ops/: HERMES_VPS_RUNNER.md  SEPARATION_POLICY.md  hermes_valueracer_dry_run.sh
ops/cron/: valueracer-dry-run.cron
ops/systemd/: valueracer-dry-run.service  valueracer-dry-run.timer
orchestration/: HERMES_VPS_INTERFACE.md  QA_GATES.md  ROTATION_AND_COOLDOWN.md  RUN_MODES.md
orchestrator/: README.md  pyproject.toml
orchestrator/elementkonfluenz_orchestrator/: __init__.py  cli.py  job.py  result.py  trend_scan.py
orchestrator/valueracer_orchestrator/: __init__.py  cli.py
qa-engine/: README.md  pyproject.toml
qa-engine/qa_engine/: __init__.py  cli.py  qa.py
schemas/: job_result.schema.json  metadata.schema.json  qa_result.schema.json  run_request.schema.json  scored_candidate.schema.json  source_manifest.schema.json  topic_brief.schema.json  trend_report.schema.json  youtube_analytics_snapshot.schema.json  youtube_metadata.schema.json  youtube_publish_plan.schema.json  youtube_upload_result.schema.json
seo-engine/: README.md  pyproject.toml
seo-engine/valueracer_seo/: __init__.py  cli.py  youtube.py
trend-engine/: README.md  TOPIC_BRIEF.md  pyproject.toml
trend-engine/data/: topic_catalog.json
trend-engine/elementkonfluenz_trend/: catalog_chart_race.py  models.py  scorer.py
trend-engine/trend_engine/: __init__.py  catalog.py  cli.py  research.py
trend-engine/trend_engine/sources/: __init__.py  base.py  item.py
trend-engine/value_racer_trend/: catalog_imperium.py  cli.py  store.py
