[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elementkonfluenz_orchestrator"
version = "0.1.0"
description = "Hermes-compatible dry-run orchestrator for Elementkonfluenz jobs."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
elementkonfluenz-orchestrator = "elementkonfluenz_orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["elementkonfluenz_orchestrator"]
