[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valueracer_orchestrator"
version = "0.1.0"
description = "Hermes-compatible dry-run orchestrator for ValueRacer jobs."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
valueracer-orchestrator = "valueracer_orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["elementkonfluenz_orchestrator", "valueracer_orchestrator"]
