[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "value_racer_trend"
version = "0.1.0"
description = "Cross-vertical topic scorer producing versioned TopicBrief JSON documents for the content-engine."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["value_racer_trend"]
