[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trend_engine"
version = "0.1.0"
description = "Dry-run topic catalog and cooldown selector for ValueRacer."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
valueracer-trend-engine = "trend_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["trend_engine"]
