[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elementkonfluenz_brain"
version = "0.1.0"
description = "Pure-logic Brain that produces versioned ScenePlan JSON documents for the Remotion renderer."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.40",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["elementkonfluenz_brain"]
